# phake

./: .gitignore  CMakeLists.txt  phake.cmake
cmake/: IDE.cmake  functions.cmake  git.cmake  libs.cmake  modules.cmake  parse.cmake  setup_configurations.cmake  test.cmake  tests.cmake
